<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/datos_mascota"
        android:textColor="#808080"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="168dp"
        android:backgroundTint="#070707"
        android:text="@string/especie"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="especie"
        android:onClick="clickBtnEspecie"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#0B0B0B"
        android:text="@string/nombre"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:onClick="clickBtnNombre"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#070707"
        android:text="@string/edad"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="clickBtnEdad"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#030304"
        android:text="@string/mostrar_info"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#323030"
        android:text="@string/salir"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>